--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "",
 		"dev": "nodemon src/app"
 	},
 	"repository": {
@@ -20,11 +20,14 @@
 	"homepage": "https://github.com/Torbaz/timesheet#readme",
 	"dependencies": {
 		"bcrypt": "^5.0.1",
+		"cookie-parser": "^1.4.5",
 		"express": "^4.17.1",
-		"mongoose": "^5.12.13"
+		"mongoose": "^5.12.13",
+		"secure-random-string": "^1.1.3"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
-		"@types/express": "^4.17.12"
+		"@types/express": "^4.17.12",
+		"nodemon": "^2.0.9"
 	}
 }
