--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "",
-		"dev": "nodemon src/app"
+		"test": "cross-env DATABASEURI=mongodb://localhost:27017/timesheet ts-mocha src/**/*.test.ts --reporter spec --exit",
+		"dev": "cross-env DATABASEURI=mongodb://localhost:27017/timesheet nodemon src/app"
 	},
 	"repository": {
 		"type": "git",
@@ -23,11 +23,21 @@
 		"cookie-parser": "^1.4.5",
 		"express": "^4.17.1",
 		"mongoose": "^5.12.13",
-		"secure-random-string": "^1.1.3"
+		"secure-random-string": "^1.1.3",
+		"ts-mongoose": "0.0.24"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
+		"@types/chai": "^4.2.20",
 		"@types/express": "^4.17.12",
-		"nodemon": "^2.0.9"
+		"@types/mocha": "^8.2.3",
+		"@types/mongoose": "^5.11.97",
+		"chai": "^4.3.4",
+		"cross-env": "^7.0.3",
+		"mocha": "^9.0.2",
+		"nodemon": "^2.0.9",
+		"ts-mocha": "^8.0.0",
+		"ts-node": "^10.0.0",
+		"typescript": "^4.3.5"
 	}
 }
