Started admin route

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "cross-env DATABASEURI=mongodb://localhost:27017/timesheet ts-mocha src/**/*.test.ts --reporter spec --exit",
-		"dev": "cross-env DATABASEURI=mongodb://localhost:27017/timesheet nodemon src/bin/www"
+		"test": "cross-env DATABASEURI=mongodb://127.0.0.1:27017/timesheet ts-mocha src/**/*.test.ts --reporter spec --exit",
+		"dev": "cross-env DATABASEURI=mongodb://127.0.0.1:27017/timesheet nodemon src/bin/www"
 	},
 	"repository": {
 		"type": "git",
