--- a/package.json
+++ b/package.json
@@ -19,19 +19,19 @@
 	},
 	"homepage": "https://github.com/Torbaz/timesheet#readme",
 	"dependencies": {
+		"@typegoose/typegoose": "^7.6.3",
 		"bcrypt": "^5.0.1",
 		"cookie-parser": "^1.4.5",
 		"express": "^4.17.1",
-		"mongoose": "^5.12.13",
-		"secure-random-string": "^1.1.3",
-		"ts-mongoose": "0.0.24"
+		"mongoose": "5.10.18",
+		"secure-random-string": "^1.1.3"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
 		"@types/chai": "^4.2.20",
 		"@types/express": "^4.17.12",
 		"@types/mocha": "^8.2.3",
-		"@types/mongoose": "^5.11.97",
+		"@types/mongoose": "5.10.2",
 		"chai": "^4.3.4",
 		"cross-env": "^7.0.3",
 		"mocha": "^9.0.2",
