--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
 		"target": "esnext",
 		"sourceMap": true,
 		"watch": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true
 	},
 	"exclude": ["node_modules"]
 }
