--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,6 +22,7 @@
 		"@typegoose/typegoose": "^7.6.3",
 		"bcrypt": "^5.0.1",
 		"cookie-parser": "^1.4.5",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"mongoose": "5.10.18",
 		"secure-random-string": "^1.1.3"
@@ -29,6 +30,8 @@
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
 		"@types/chai": "^4.2.20",
+		"@types/cookie-parser": "^1.4.2",
+		"@types/cors": "^2.8.12",
 		"@types/express": "^4.17.12",
 		"@types/mocha": "^8.2.3",
 		"@types/mongoose": "5.10.2",
