Made many modifications to the config side of things on the backend
Added setEnv, changed config location, added scripts and changed tsc output folder.

--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -3,10 +3,10 @@
 		"module": "commonjs",
 		"target": "esnext",
 		"sourceMap": true,
-		"watch": true,
 		"esModuleInterop": true,
 		"experimentalDecorators": true,
-		"emitDecoratorMetadata": true
+		"emitDecoratorMetadata": true,
+		"outDir": "build"
 	},
 	"exclude": ["node_modules"]
 }
