--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,11 +1,15 @@
 {
 	"name": "timesheet",
 	"version": "1.0.0",
-	"description": "",
+	"description": "Timesheet",
 	"main": "index.js",
+	"bin": {
+		"setEnv": "src/bin/env/setEnv.mjs"
+	},
 	"scripts": {
-		"test": "cross-env DATABASEURI=mongodb://127.0.0.1:27017/timesheet ts-mocha src/**/*.test.ts --reporter spec --exit",
-		"dev": "cross-env DATABASEURI=mongodb://127.0.0.1:27017/timesheet nodemon src/bin/www"
+		"setup": "npm link --force && tsc && setEnv development node build/bin/www",
+		"test": "setEnv test ts-mocha src/**/*.test.ts --reporter spec --exit",
+		"dev": "nodemon src/bin/www --config ./config/nodemon.json"
 	},
 	"repository": {
 		"type": "git",
@@ -35,10 +39,12 @@
 		"@types/express": "^4.17.12",
 		"@types/mocha": "^8.2.3",
 		"@types/mongoose": "5.10.2",
+		"@types/shelljs": "^0.8.9",
 		"chai": "^4.3.4",
 		"cross-env": "^7.0.3",
-		"mocha": "^9.0.2",
+		"mocha": "^8.0.0",
 		"nodemon": "^2.0.9",
+		"shelljs": "^0.8.4",
 		"ts-mocha": "^8.0.0",
 		"ts-node": "^10.0.0",
 		"typescript": "^4.3.5"
