--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,7 +9,7 @@
 	"scripts": {
 		"setup": "npm link --force && tsc && setEnv development node build/bin/www",
 		"test": "setEnv test ts-mocha src/**/*.test.ts --reporter spec --exit",
-		"dev": "nodemon src/bin/www --config ./config/nodemon.json"
+		"dev": "setEnv development nodemon src/bin/www --config ./config/nodemon.json"
 	},
 	"repository": {
 		"type": "git",
@@ -29,6 +29,9 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"mongoose": "5.10.18",
+		"next": "^11.0.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"secure-random-string": "^1.1.3"
 	},
 	"devDependencies": {
@@ -39,6 +42,7 @@
 		"@types/express": "^4.17.12",
 		"@types/mocha": "^8.2.3",
 		"@types/mongoose": "5.10.2",
+		"@types/react": "^17.0.15",
 		"@types/shelljs": "^0.8.9",
 		"chai": "^4.3.4",
 		"cross-env": "^7.0.3",
