--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
 	"description": "Timesheet",
 	"main": "index.js",
 	"bin": {
-		"setEnv": "src/bin/env/setEnv.mjs"
+		"setEnv": "server/bin/env/setEnv.mjs"
 	},
 	"scripts": {
-		"setup": "npm link --force && tsc && setEnv development node build/bin/www",
-		"test": "setEnv test ts-mocha src/**/*.test.ts --reporter spec --exit",
-		"dev": "setEnv development nodemon src/bin/www --config ./config/nodemon.json"
+		"build": "next build && tsc --project server.tsconfig.json",
+		"start": "setEnv production node server/bin/www.js",
+		"test": "setEnv test ts-mocha server/**/*.test.ts --reporter spec --exit",
+		"dev": "setEnv development nodemon server/bin/www --config ./config/nodemon.json"
 	},
 	"repository": {
 		"type": "git",
@@ -42,7 +43,9 @@
 		"@types/express": "^4.17.12",
 		"@types/mocha": "^8.2.3",
 		"@types/mongoose": "5.10.2",
-		"@types/react": "^17.0.15",
+		"@types/node": "^12.12.21",
+		"@types/react": "^17.0.2",
+		"@types/react-dom": "^17.0.1",
 		"@types/shelljs": "^0.8.9",
 		"chai": "^4.3.4",
 		"cross-env": "^7.0.3",
@@ -50,7 +53,7 @@
 		"nodemon": "^2.0.9",
 		"shelljs": "^0.8.4",
 		"ts-mocha": "^8.0.0",
-		"ts-node": "^10.0.0",
+		"ts-node": "^10.1.0",
 		"typescript": "^4.3.5"
 	}
 }
