--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"next": "^11.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"secure-random-string": "^1.1.3"
+		"secure-random-string": "^1.1.3",
+		"swr": "^0.5.6"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
