Overhauled backend validation.  Changed routes folder.

--- a/server.tsconfig.json
+++ b/server.tsconfig.json
@@ -4,7 +4,8 @@
 		"module": "commonjs",
 		"sourceMap": false,
 		"noEmit": false,
-		"allowJs": false
+		"allowJs": false,
+		"outDir": "dist"
 	},
 	"include": ["server/**/*.ts"]
 }
