--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,13 @@
 {
 	"compilerOptions": {
-		"target": "esnext",
 		"module": "commonjs",
+		"sourceMap": false,
+		"noEmit": false,
+		"allowJs": false,
 		"esModuleInterop": true,
-		"lib": ["dom", "dom.iterable", "esnext"],
-		"allowJs": true,
-		"skipLibCheck": true,
-		"strict": false,
-		"forceConsistentCasingInFileNames": true,
-		"noEmit": true,
-		"moduleResolution": "node",
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"jsx": "preserve",
 		"experimentalDecorators": true,
-		"emitDecoratorMetadata": true
+		"emitDecoratorMetadata": true,
+		"outDir": "build"
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next.config.js"],
-	"exclude": ["node_modules"]
+	"include": ["server/**/*.ts"]
 }
