--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
+		"target": "ESNext",
 		"sourceMap": false,
 		"noEmit": false,
 		"allowJs": false,
