--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"express": "^4.17.1",
 		"mongoose": "5.10.18",
 		"next": "^11.0.1",
+		"nodemailer": "^6.6.3",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"secure-random-string": "^1.1.3",
@@ -50,6 +51,7 @@
 		"@types/mocha": "^8.2.3",
 		"@types/mongoose": "5.10.2",
 		"@types/node": "^12.12.21",
+		"@types/nodemailer": "^6.4.4",
 		"@types/react": "^17.0.15",
 		"@types/react-dom": "^17.0.1",
 		"@types/shelljs": "^0.8.9",
