--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
 		"start": "setEnv production node %npm_package_dirs_build%/bin/www.js",
 		"test": "setEnv test ts-mocha %npm_package_dirs_server%/**/*.test.ts --reporter spec --exit",
 		"dev": "setEnv development nodemon %npm_package_dirs_server%/bin/www",
-		"setupTestDB": "setEnv development ts-node %npm_package_dirs_server%/bin/setup/setupTestDB && setEnv production ts-node %npm_package_dirs_server%/bin/setup/setupTestDB",
-		"clearDB": "setEnv development ts-node %npm_package_dirs_server%/bin/setup/clearDB && setEnv production ts-node %npm_package_dirs_server%/bin/setup/clearDB"
+		"setupTestDB": "setEnv development ts-node %npm_package_dirs_server%/bin/setup/setupTestDB",
+		"clearDB": "setEnv development ts-node %npm_package_dirs_server%/bin/setup/clearDB"
 	},
 	"repository": {
 		"type": "git",
